[gd_scene load_steps=2 format=3 uid="uid://b1btmq8y3gexs"]

[ext_resource type="Script" path="res://game_settings/components/_misc_components/input_confirm_window/input_confirm_window.gd" id="1_uql0i"]

[node name="InputConfirmWindow" type="ConfirmationDialog"]
size = Vector2i(300, 118)
min_size = Vector2i(300, 115)
ok_button_text = "Confirm"
dialog_close_on_escape = false
script = ExtResource("1_uql0i")
listening_wait_time = 0.2

[node name="MainCtnr" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 69.0
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ListenBtn" type="Button" parent="MainCtnr"]
layout_mode = 2
size_flags_vertical = 3
text = "ddd"
icon_alignment = 1
expand_icon = true

[node name="ListenProgress" type="ProgressBar" parent="MainCtnr"]
visible = false
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="AlreadyExistsLabel" type="Label" parent="MainCtnr"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="ListenTimer" type="Timer" parent="."]
one_shot = true

[node name="MaxListenTimer" type="Timer" parent="."]
one_shot = true
